refactor:  Category module completly removed
